set viewport-relative font sizes to avoid the overly huge headlines on mobile

--- a/output/assets/styles.css
+++ b/output/assets/styles.css
@@ -24,7 +24,6 @@ body {
 
 h1, h2, h3 {
 	font-family: "League Spartan", "Helvetica", "OpenSans", "FreeSans", sans-serif;
-	font-size: 2.7rem;
 	font-weight: 400;
 	line-height: 4.25rem;
 	margin-top: 0.7em;
@@ -32,21 +31,24 @@ h1, h2, h3 {
 }
 
 h1 {
+	font-size: 2.7rem;
+	font-size: 7vh;
 	letter-spacing: 0.125rem;
 	text-transform: uppercase;
 }
 
-h2, h3 {
+h2 {
+	font-size: 1.7rem;
+	font-size: 4vh;
 	letter-spacing: 0.08333rem;
 	line-height: 2.83333rem;
 }
 
-h2 {
-	font-size: 1.7rem;
-}
-
 h3 {
 	font-size: 1.5rem;
+	font-size: 3vh;
+	letter-spacing: 0.08333rem;
+	line-height: 2.83333rem;
 }
 
 html, body {
